Fix password visibility toggle positioning
While testing on Epiphany (GNOME webkit based browser), the password
show toggle appears to be weirdly positioned lower than it should.
This inaccuracy can easily be avoided by not positioning the element
relative to the outer field container, by rather providing a closer
container to closely position it relative to the input field.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -292,7 +292,7 @@ input {
 
 .signup__field label {
   display: block;
-  padding: 0.25em 0;
+  padding: 0.15rem 0;
 
   color: var(--text);
   font-size: var(--fs);
@@ -366,7 +366,7 @@ input {
   transform: scale(1);
 }
 
-.password {
+.password__wrapper {
   position: relative;
 }
 
@@ -376,8 +376,8 @@ input {
   cursor: pointer;
 
   position: absolute;
-  right: 1rem;
-  top: 1.75rem;
+  top: 0.3rem;
+  right: 0.7rem;
   padding: 0.5rem;
 
   border-radius: 75% 15%;
