--- a/src/styles/signup.scss
+++ b/src/styles/signup.scss
@@ -100,7 +100,7 @@ input {
 
     & label {
       display: block;
-      padding: 0.25em 0;
+      padding: 0.15rem 0;
 
       color: var(--text);
       font-size: var(--fs);
@@ -177,15 +177,17 @@ input {
 }
 
 .password {
-  position: relative;
+  &__wrapper {
+    position: relative;
+  }
 
   &__toggle {
     appearance: none;
     cursor: pointer;
 
     position: absolute;
-    right: 1rem;
-    top: 1.75rem;
+    top: 0.3rem;
+    right: 0.7rem;
     padding: 0.5rem;
 
     border-radius: 75% 15%;
